--- a/wercker.yml
+++ b/wercker.yml
@@ -20,14 +20,7 @@ build:
           code: |
             git config --global user.email "walter@wercker.com"
             git config --global user.name "wercker build"
-            git config --list
-            git remote -v
             git config --global push.default simple
-            #git remote set-url origin https://github.com/wercker/homebrew-wercker.git
-            git remote -v
-            git config --list
-            cat .git/config
-            #TODO add ssh key or finger print thing?
       - add-to-known_hosts:
             hostname: github.com
             fingerprint: 16:27:ac:a5:76:28:2d:36:63:1b:56:4d:eb:df:a6:48
@@ -39,5 +32,5 @@ build:
           code: |
             git add .
             git commit -m '$VERSION'
-            git push -f origin HEAD:master
+            git push origin HEAD:master
 
