--- a/wercker.yml
+++ b/wercker.yml
@@ -38,6 +38,6 @@ build:
           name: git steps
           code: |
             git add .
-            git commit -m '$VERSION'
+            git commit -m "Release $VERSION"
             git push -f origin HEAD:master
 
