--- a/wercker.yml
+++ b/wercker.yml
@@ -34,7 +34,7 @@ release:
 
     - add-to-known_hosts:
         hostname: github.com
-        fingerprint: 16:27:ac:a5:76:28:2d:36:63:1b:56:4d:eb:df:a6:48
+        fingerprint: nThbg6kXUpJWGl7E1IGOCspRomTxdCARLviKw6E5SY8
         type: rsa
 
     - add-ssh-key:
